--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "*"
 btleplug = "*"
+lazy_static = "*"
+slog = "*"
+slog-term = "*"
+tokio = {version="*", features=["macros"]}
