--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "*"
+async-trait = "*"
 btleplug = "*"
 futures = "*"
 once_cell = "*"
@@ -14,5 +15,5 @@ slog = "*"
 slog-term = "*"
 structopt = "*"
 strum = {version="*", features=["derive"]}
-tokio = {version="*", features=["macros"]}
+tokio = {version="*", features=["macros", "time"]}
 uuid = "*"
