Fix config path lookup
Co-authored-by: jiulingz <jolinzhou90@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,14 +9,13 @@ edition = "2021"
 anyhow = "*"
 async-trait = "*"
 btleplug = {version="*", features=["serde"]}
+directories = "*"
 futures = "*"
 once_cell = "*"
 serde = "*"
-shellexpand = "*"
 slog = "*"
 slog-term = "*"
 structopt = "*"
-strum = {version="*", features=["derive"]}
 toml = "*"
 tokio = {version="*", features=["macros", "time"]}
 uuid = "*"
