Switch from anyhow to thiserror
Co-authored-by: jiulingz <jolinzhou90@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ serde = "*"
 slog = "*"
 slog-term = "*"
 structopt = "*"
+thiserror = "*"
 toml = "*"
 tokio = {version="*", features=["macros", "time"]}
 uuid = "*"
