Add GetState and SubscribeState commands
Co-authored-by: Jolin Zhou <jolinzhou90@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ thiserror = "*"
 toml = "*"
 tonic = "*"
 tokio = {version="*", features=["macros", "time"]}
+tokio-stream = "*"
 uuid = "*"
 
 [build-dependencies]
