--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,16 +7,18 @@ edition = "2021"
 desk-common = { path = "../common" }
 anyhow = "*"
 async-trait = "*"
-btleplug = {version="*", features=["serde"]}
+btleplug = { version = "*", features = ["serde"] }
 directories = "*"
 futures = "*"
 serde = "*"
+signal-hook = "*"
+signal-hook-tokio = { version = "*", features = ["futures-v0_3"] }
 slog = "*"
 slog-term = "*"
 structopt = "*"
 thiserror = "*"
 toml = "*"
 tonic = "*"
-tokio = {version="*", features=["macros"]}
+tokio = { version = "*", features = ["macros"] }
 tokio-stream = "*"
 uuid = "*"
