--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
-name = "desk-client"
+name = "desklink-client"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "deskctl"
+path = "src/main.rs"
+
 [dependencies]
-desk-common = { path = "../common" }
+desklink-common = { path = "../common" }
 anyhow = "*"
 directories = "*"
 serde = "*"
