--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
-name = "desk-server"
+name = "desklink-server"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "deskd"
+path = "src/main.rs"
+
 [dependencies]
-desk-common = { path = "../common" }
+desklink-common = { path = "../common" }
 anyhow = "*"
 async-trait = "*"
 btleplug = { version = "*", features = ["serde"] }
