--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -19,6 +19,7 @@ signal-hook = "*"
 signal-hook-tokio = { version = "*", features = ["futures-v0_3"] }
 slog = "*"
 slog-term = "*"
+slog-json = "*"
 structopt = "*"
 thiserror = "*"
 toml = "*"
