--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,7 +14,7 @@ async-trait = "*"
 btleplug = { version = "*", features = ["serde"] }
 directories = "*"
 futures = "*"
-serde = "*"
+serde = { version = "*", features = ["derive"] }
 signal-hook = "*"
 signal-hook-tokio = { version = "*", features = ["futures-v0_3"] }
 slog = "*"
