--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,13 +9,13 @@ path = "src/main.rs"
 
 [dependencies]
 desklink-common = { path = "../common" }
-anyhow = "*"
-directories = "*"
-serde = { version = "*", features = ["derive"] }
-slog = "*"
-slog-term = "*"
-structopt = "*"
-thiserror = "*"
-toml = "*"
-tokio = { version = "*", features = ["macros"] }
-tonic = "*"
+anyhow = "1.0.64"
+directories = "4.0.1"
+serde = { version = "1.0.144", features = ["derive"] }
+slog = "2.7.0"
+slog-term = "2.9.0"
+structopt = "0.3.26"
+thiserror = "1.0.34"
+toml = "0.5.9"
+tokio = { version = "1.21.0", features = ["macros"] }
+tonic = "0.8.1"
