--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -4,12 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-once_cell = "*"
-prost = "*"
-serde = "*"
-slog = "*"
-thiserror = "*"
-tonic = "*"
+once_cell = "1.14.0"
+prost = "0.11.0"
+serde = "1.0.144"
+slog = "2.7.0"
+thiserror = "1.0.34"
+tonic = "0.8.1"
 
 [build-dependencies]
-tonic-build = "*"
+tonic-build = "0.8.0"
