--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -13,9 +13,9 @@ anyhow = "1.0.64"
 clap = { version = "3.2.20", features = ["derive"] }
 directories = "4.0.1"
 serde = { version = "1.0.144", features = ["derive"] }
-slog = "2.7.0"
-slog-term = "2.9.0"
 thiserror = "1.0.34"
 toml = "0.5.9"
 tokio = { version = "1.21.0", features = ["macros"] }
 tonic = "0.8.1"
+tracing = "0.1.36"
+tracing-subscriber = "0.3.15"
