--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2021"
 once_cell = "1.14.0"
 prost = "0.11.0"
 serde = "1.0.144"
-slog = "2.7.0"
 thiserror = "1.0.34"
 tonic = "0.8.1"
+tracing = "0.1.36"
 
 [build-dependencies]
 tonic-build = "0.8.0"
