--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -18,12 +18,12 @@ futures = "0.3.24"
 serde = { version = "1.0.144", features = ["derive"] }
 signal-hook = "0.3.14"
 signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
-slog = "2.7.0"
-slog-term = "2.9.0"
-slog-json = "2.6.1"
 thiserror = "1.0.34"
 toml = "0.5.9"
 tonic = "0.8.1"
 tokio = { version = "1.21.0", features = ["macros"] }
 tokio-stream = "0.1.9"
+tracing = "0.1.36"
+tracing-appender = "0.2.2"
+tracing-subscriber = { version = "0.3.15", features = ["json"] }
 uuid = "1.1.2"
